# ai-trading-assistant

./: .env.example  .gitignore  PROJECT.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_event_log.py
app/: __init__.py
app/aggregation/: __init__.py  aggregator.py  models.py  weighting.py
app/config/: settings.py
app/context/: __init__.py  engine.py
app/core/: __init__.py  app.py  (+2 more)
config/: default.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DISCORD_BOT_SETUP.md  MILESTONES.md  PLUGIN_GUIDE.md
scripts/: dev.sh  start.sh  stop.sh
tests/: conftest.py  test_action_registry.py  test_analyze_plugin.py  test_confidence_weighting.py  test_config.py  test_context_engine.py  test_core.py  test_db.py  test_discord_bot.py  test_discord_dispatch.py  test_donchian_repeat_policy.py  test_earnings_plugin.py  test_ema_plugin.py  test_event_bus.py  test_evidence_aggregator.py  test_evidence_schema.py  test_indicators_math.py  test_intelligence_plugin.py  test_logging.py  test_macro_plugin.py  test_marketdata.py  test_milestone7_pipeline_integration.py  test_milestone8_pipeline_integration.py  test_new_indicator_plugins.py  test_news_plugin.py  test_ping_plugin.py  test_pipeline_integration.py  test_plugins.py  test_portfolio_engine.py  test_portfolio_scoring.py  test_prioritization_engine.py  test_prioritization_scoring.py  test_reasoning_engine.py  test_scan_command.py  test_scanner_pipeline_integration.py  test_scanner_plugin.py  test_strategy_engine.py  test_watchlist_command.py
(+90 files in other folders)
